--- a/app/code/Magento/Multishipping/view/frontend/layout/multishipping_checkout_billing.xml
+++ b/app/code/Magento/Multishipping/view/frontend/layout/multishipping_checkout_billing.xml
@@ -16,6 +16,7 @@
         <referenceContainer name="content">
             <block class="Magento\Multishipping\Block\Checkout\Billing" name="checkout_billing" template="Magento_Multishipping::checkout/billing.phtml" cacheable="false">
                 <arguments>
+                    <argument name="checkout_config_view_model" xsi:type="object">Magento\Checkout\ViewModel\CheckoutConfig</argument>
                     <argument name="checkout_data" xsi:type="object">Magento\Multishipping\Block\DataProviders\Billing</argument>
                 </arguments>
                 <container name="payment_methods_before" label="Payment Methods Before"/>
