--- a/app/code/Magento/Multishipping/view/frontend/templates/checkout/billing.phtml
+++ b/app/code/Magento/Multishipping/view/frontend/templates/checkout/billing.phtml
@@ -9,6 +9,8 @@
  *
  * @var $block \Magento\Multishipping\Block\Checkout\Billing
  */
+/** @var $checkoutConfig \Magento\Checkout\ViewModel\CheckoutConfig */
+$checkoutConfig = $block->getData('checkout_config_view_model');
 ?>
 <div id="checkout-loader" data-role="checkout-loader" class="loading-mask" data-mage-init='{"billingLoader": {}}'>
     <div class="loader">
@@ -18,7 +20,7 @@
     </div>
 </div>
 <script>
-    window.checkoutConfig = <?= /* @noEscape */ $block->getCheckoutData()->getSerializedCheckoutConfigs(); ?>;
+    window.checkoutConfig = <?= /* @noEscape */ $checkoutConfig->getSerializedCheckoutConfig() ?>;
     window.isCustomerLoggedIn = window.checkoutConfig.isCustomerLoggedIn;
     window.customerData = window.checkoutConfig.customerData;
 </script>
